# DTEAM-django-practical-test

./: .dockerignore  .env  .env.new  .gitignore  docker-compose.yml  pyproject.toml  readme.md
CVProject/: Dockerfile  db.sqlite3  requirements.txt
CVProject/CVProject/: celery.py  settings.py  urls.py
CVProject/main/: admin.py  context_processors.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  urls_api.py  views.py  views_api.py
CVProject/main/i18n/: bundle.py  i18n_openai.py
CVProject/main/middleware/: custom_middleware.py
CVProject/main/migrations/: 0001_initial.py  0002_alter_cvdoc_bio_alter_cvdoc_phone_and_more.py  0003_alter_project_options_add_cvdoc_profession_and_more.py  0004_requestlog.py  0005_alter_cvdoc_options_alter_skill_experience_and_more.py  0006_cvdoc_avatar.py
CVProject/main/static/: styles-pdf.css  styles.css
CVProject/main/templates/: base.html  cv.html  cv_pdf.html  index.html  logs.html  logs_list.html  settings.html
CVProject/main/templatetags/: cv_tags.py
CVProject/main/tests/: tests.py  tests_api.py
fixtures/: all_data.json  cv_data.json
