[project]
name = "dteam-test-project"
version = "0.1.0"
description = "DTEAM - Django Developer Practical Test"
authors = [
    {name = "Andrij Kasych",email = "andrijkasych@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "reportlab (>=4.4.1,<5.0.0)",
    "xhtml2pdf (>=0.2.17,<0.3.0)",
    "django-xhtml2pdf (>=0.0.4,<0.0.5)",
    "pillow (>=11.2.1,<12.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "redis (>=6.2.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
django = "^5.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
